base/productivity/freshrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: productivity
  labels:
    app.kubernetes.io/name: freshrss
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: freshrss
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
